--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 html {
   scroll-behavior: smooth;
+  background-color: #E4E4E7;
 }
 
 header {
@@ -97,7 +98,7 @@ a {
 /*portfolio start*/
 
 .portfolio {
-  width: 970px;
+  max-width: 970px;
 }
 
 .portfolio_title {
