--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --font-family: "Montserrat", sans-serif;
+  
 }
 
 *{
@@ -27,6 +28,8 @@ header {
 
 a {
   text-decoration: none;
+  background-color: transparent;
+  color: inherit;
 }
 
 
@@ -114,6 +117,7 @@ a {
 .item {
   display: grid;
   place-items: center;
+  margin-bottom: 70px;
 }
 
 .portfolio_img {
