--- a/media.css
+++ b/media.css
@@ -21,6 +21,7 @@
 
   .contacts_container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    margin-bottom: 30px;
   }
 }
