--- a/media.css
+++ b/media.css
@@ -13,6 +13,11 @@
 
   .titles_container {
     margin-left: auto;
+    margin-bottom: 45px;
+  }
+
+  .btn {
+    font-size: 32px;
   }
 
   br {
@@ -23,5 +28,11 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 930px) {
+  .portfolio_img {
+    max-width: 90vw;
   }
 }
