--- a/media.css
+++ b/media.css
@@ -36,3 +36,30 @@
     max-width: 90vw;
   }
 }
+
+@media (max-width: 600px) {
+  .image_container {
+    max-width: 90vw;
+  }
+
+  .main-title {
+    font-size: 32px;
+  }
+
+  .sub-title {
+    font-size: 18px;
+  }
+
+  .btn {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 362px) {
+  br {
+    display: inline;
+  }
+  .btn {
+    font-size: 24px;
+  }
+}
