--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ a {
 }
 
 .watsapp {
-  background-image: url(assets/watsapp.png);
+  background-image: url(assets/Vector.png);
 }
 
 .linkedin {
