--- a/style.css
+++ b/style.css
@@ -176,8 +176,9 @@ a {
   font-size: 20px;
   color: #fff;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   cursor: pointer;
+  gap: 16px;
 }
 
 .svg_container {
@@ -187,7 +188,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 16px;
+  /* margin-right: 16px; */
 }
 
 .telegram {
