--- a/media.css
+++ b/media.css
@@ -35,6 +35,9 @@
   .portfolio_img {
     max-width: 90vw;
   }
+  .contacts_container {
+    gap: 40px;
+  }
 }
 
 @media (max-width: 600px) {
@@ -55,7 +58,9 @@
   }
 
   .contacts_title {
+    margin-top: 30px;
     font-size: 24px;
+    margin-bottom: 24px;
   }
 
   .link {
@@ -64,6 +69,8 @@
 
   .contacts_container {
     margin-bottom: 0px;
+    gap: 20px;
+    margin-bottom: 24px;
   }
 
   .portfolio_title {
@@ -73,6 +80,11 @@
   .portfolio h3 {
     font-size: 16px;
   }
+
+  .footer_wrap {
+    height: auto;
+  }
+
 
 }
 
