--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   padding: 0;
 }
 
+*:hover {
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
   background-color: #E4E4E7;
@@ -95,11 +99,14 @@ a {
   text-align: center;
   line-height: 48px;
   cursor: pointer;
+  border: 1px solid #252525;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .btn:hover {
   border: 1px solid #3b3b3b;
-  border-radius: 8px;
+  border-radius: 18px;
   background-color: #3b3b3b;
 }
 
@@ -144,13 +151,25 @@ a {
   color: #000;
 }
 
+.item h3 a {
+  display: block;
+  border: 1px solid #E4E4E7;
+  padding: 5px;
+}
+
+h3 a:hover {
+  border: 1px solid #f1f1f3;
+  border-radius: 8px;
+  background-color: #f1f1f3;
+}
+
 /*portfolio end*/
 
 /*contacts start*/
 
 .footer_wrap {
   max-width: 1440px;
-  height: 428px;
+  /* height: 428px; */
   border-radius: 30px 30px 0 0;
   background: #252525;
   margin-top: 80px;
@@ -172,7 +191,8 @@ a {
   font-size: 52px;
   text-align: center;
   color: #fff;
-  margin-bottom: 62px;
+  margin-top: 30px;
+  margin-bottom: 32px;
 }
 
 .link {
@@ -185,6 +205,14 @@ a {
   align-items: center;
   cursor: pointer;
   gap: 16px;
+  border: 1px solid #252525;
+  padding: 15px;
+}
+
+.link:hover {
+  border: 1px solid #3b3b3b;
+  border-radius: 100px;
+  background-color: #3b3b3b;
 }
 
 .svg_container {
