--- a/style.css
+++ b/style.css
@@ -265,6 +265,7 @@ h3 a:hover {
 /*pop-up start*/
 
 .pop-up {
+  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -278,7 +279,7 @@ h3 a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .pop-up__site-name {
@@ -287,6 +288,7 @@ h3 a:hover {
   font-size: 52px;
   text-align: center;
   color: #000;
+  margin-bottom: 25px;
 }
 
 .pop-up__description {
@@ -296,6 +298,7 @@ h3 a:hover {
   line-height: 150%;
   text-align: center;
   color: #555;
+  margin-bottom: 25px;
 }
 
 .pop-up__url {
@@ -304,10 +307,16 @@ h3 a:hover {
   font-size: 16px;
   text-align: center;
   color: #000;
+  margin-bottom: 40px;
+}
+
+.pop-up__img {
+  width: 430px;
+  height: auto;
 }
 
 .back {
-  width: 50%;
+  width: 430px;
   height: 80px;
   background: #f1f1f1;
   border: 1px solid #f1f1f1;
@@ -319,6 +328,11 @@ h3 a:hover {
   line-height: 80px;
   color: #000;
   cursor: pointer;
+}
+
+.back:hover{
+  background: #f7f6f6;
+  border: 1px solid #f7f6f6;
 }
 
 /*pop-up end*/
