--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ h3 a:hover {
   right: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
   background-color: #E4E4E7;
 
   display: flex;
@@ -308,6 +308,13 @@ h3 a:hover {
   text-align: center;
   color: #000;
   margin-bottom: 40px;
+}
+
+.pop-up__image-container {
+  overflow: auto;
+  height: 55%;
+  margin-bottom: 40px;
+  border-radius: 15px;
 }
 
 .pop-up__img {
