--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ h3 a:hover {
   /* overflow: auto; */
   background-color: #E4E4E7;
 
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
   /* align-items: center; */
@@ -318,7 +318,7 @@ h3 a:hover {
 }
 
 .pop-up__img {
-  width: 430px;
+  max-width: 430px;
   height: auto;
 }
 
