--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ h3 a:hover {
 /*pop-up start*/
 
 .pop-up {
-  display: none;
+  /* display: none; */
   position: fixed;
   z-index: 1;
   left: 0;
@@ -276,7 +276,7 @@ h3 a:hover {
   /* overflow: auto; */
   background-color: #E4E4E7;
 
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   justify-content: center;
   /* align-items: center; */
