--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 :root {
   --font-family: "Montserrat", sans-serif;
-  
 }
 
 *{
@@ -18,6 +17,10 @@
 html {
   scroll-behavior: smooth;
   background-color: #E4E4E7;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 header {
